--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -8,7 +8,7 @@
 
 		<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 		
-		<link rel='stylesheet' type='text/css' href='/style.css'>
+		<link rel='stylesheet' type='text/css' href='style.css'>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="icon" href="{{ "favicon.png" | relURL }}" type="image/png">
 	</head>
