--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -19,9 +19,10 @@
 		{{ block "main" . }}
 		<!-- The part of the page that begins to differ between templates -->
 		{{ end }}
-		{{ block "footer" . }}
+		{{/*  {{ block "footer" . }}
 		<!-- More shared code, perhaps a footer but that can be overridden if need be in  -->
-		{{ end }}
+		{{ end }}  */}}
+		{{/*  {{ partial "footer.html" . }}  */}}
 	</body>
 </html>
 
