--- a/static/style.css
+++ b/static/style.css
@@ -22,6 +22,39 @@ header {
     font-style: normal; */
 }
 
+.footer-line {
+    border: none;
+    height: 1px;
+    background-color: #000;
+    margin-top: 50px;
+    /* margin-bottom: 20px; */
+  }
+
+.footer-container {
+    text-align: left;
+    /* padding-top: 20px; */
+}
+
+.social-title {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+  
+.social-links {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: left;
+    gap: 10px;
+}
+  
+.social-links li a img {
+    width: 20px;
+    height: 20px;
+}
+  
+
 body {
     margin: auto;
     width: 760px;
@@ -109,4 +142,8 @@ h1 {
 
 h2 {
     font-weight: 400;
+}
+
+h4 {
+    font-weight: 300;
 }
